--- a/index.html
+++ b/index.html
@@ -14,11 +14,28 @@
         background: black;
       }
 
+      #labels-container {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        padding: 10px;
+        color: white;
+        text-align: right;
+      }
+
+      p {
+        margin: 0;
+      }
+
     </style>
   </head>
   <body>
     <main>
-      <div id='globe'></div>
+      <div id='globe-container'></div>
+      <div id='labels-container'>
+        <p class="label">Placeholder</p>
+      </div>
     </main>
 
     </script>
