--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
       p {
         margin: 0;
+        transition: opacity 5s;
       }
 
     </style>
@@ -33,9 +34,7 @@
   <body>
     <main>
       <div id='globe-container'></div>
-      <div id='labels-container'>
-        <p class="label">Placeholder</p>
-      </div>
+      <div id='labels-container'></div>
     </main>
 
     </script>
